--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@angular/fire": "^7.5.0",
     "@angular/forms": "^15.2.0",
     "@angular/material": "^15.2.9",
+    "@angular/material-date-fns-adapter": "^16.0.0",
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "date-fns": "^2.30.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
