--- a/.github/workflows/deploy-firebase-on-merge.yml
+++ b/.github/workflows/deploy-firebase-on-merge.yml
@@ -27,6 +27,11 @@ jobs:
       - run: npm ci
       - run: npm run build --if-present
       - run: npm run deploy
+      - uses: w9jds/firebase-action@v11.30.0
+        with:
+          args: deploy --only hosting
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
       # - uses: FirebaseExtended/action-hosting-deploy@v0
       #   with:
       #     repoToken: '${{ secrets.GITHUB_TOKEN }}'
