--- a/.github/workflows/deploy-firebase-on-merge.yml
+++ b/.github/workflows/deploy-firebase-on-merge.yml
@@ -26,7 +26,7 @@ jobs:
           cache: 'npm'
       - run: npm ci
       - run: npm run build --if-present
-      - run: npm run deploy
+      # - run: npm run deploy
       - uses: w9jds/firebase-action@v11.30.0
         with:
           args: deploy --only hosting
