--- a/.github/workflows/deploy-firebase-on-merge.yml
+++ b/.github/workflows/deploy-firebase-on-merge.yml
@@ -24,8 +24,8 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
-      - run: npm ci --no-package-lock
-      - run: npm run build --if-present
+      - run: npm install
+      - run: npm run build
       # - run: npm run deploy
       - uses: w9jds/firebase-action@v11.30.0
         with:
